# ros_reflexxes

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: config.yaml
.github/workflows/: ci.yaml  format.yaml  prerelease.yaml
Linux/: Makefile.global
libreflexxestype2/: CMakeLists.txt  README.txt  package.xml
libreflexxestype2/Linux/: Makefile.global
libreflexxestype2/include/libreflexxestype2/: RMLInputParameters.h  RMLOutputParameters.h  RMLPositionFlags.h  RMLPositionInputParameters.h  RMLPositionOutputParameters.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h  RMLVelocityOutputParameters.h  ReflexxesAPI.h  TypeIIRMLDecisionTree1A.h  TypeIIRMLDecisionTree2.h  TypeIIRMLPolynomial.h  TypeIIRMLPosition.h  TypeIIRMLStep1IntermediateProfiles.h  TypeIIRMLStep1Profiles.h  TypeIIRMLStep2IntermediateProfiles.h  TypeIIRMLStep2Profiles.h  TypeIIRMLStep2WithoutSynchronization.h  TypeIIRMLVelocity.h
libreflexxestype2/src/RMLPositionSampleApplications/: 01_RMLPositionSampleApplication.cpp  02_RMLPositionSampleApplication.cpp  03_RMLPositionSampleApplication.cpp  07_RMLPositionSampleApplication.cpp
libreflexxestype2/src/RMLVelocitySampleApplications/: 04_RMLVelocitySampleApplication.cpp  05_RMLVelocitySampleApplication.cpp  06_RMLVelocitySampleApplication.cpp  08_RMLVelocitySampleApplication.cpp
libreflexxestype2/src/TypeIIRML/: ReflexxesAPI.cpp  TypeIIRMLCalculatePositionalExtrems.cpp  TypeIIRMLDecisionTree1A.cpp  TypeIIRMLDecisionTree1B.cpp  TypeIIRMLDecisionTree1C.cpp  TypeIIRMLDecisionTree2.cpp  TypeIIRMLDecisions.cpp  TypeIIRMLFallBackStrategy.cpp  TypeIIRMLIsPhaseSynchronizationPossible.cpp  TypeIIRMLPolynomial.cpp  TypeIIRMLPosition.cpp  TypeIIRMLQuicksort.cpp  TypeIIRMLSetupModifiedSelectionVector.cpp  TypeIIRMLStep1.cpp  TypeIIRMLStep1IntermediateProfiles.cpp  TypeIIRMLStep1Profiles.cpp  TypeIIRMLStep2.cpp  TypeIIRMLStep2IntermediateProfiles.cpp  TypeIIRMLStep2PhaseSynchronization.cpp  TypeIIRMLStep2Profiles.cpp  TypeIIRMLStep2WithoutSynchronization.cpp  TypeIIRMLStep3.cpp  TypeIIRMLVelocity.cpp  TypeIIRMLVelocityCalculatePositionalExtrems.cpp  TypeIIRMLVelocityFallBackStrategy.cpp  TypeIIRMLVelocityIsPhaseSynchronizationPossible.cpp  TypeIIRMLVelocityMethods.cpp  TypeIIRMLVelocitySetupPhaseSyncSelectionVector.cpp
reflexxes_wrapper/: CMakeLists.txt  README.txt  package.xml
reflexxes_wrapper/include/reflexxes_wrapper/: reflexxes_wrapper.h
