<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libreflexxestype2</name>
  <version>0.0.0</version>
  <description>Reflexxes Type II trajectory smoothing</description>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
