<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reflexxes_wrapper</name>
  <version>0.0.0</version>
  <description>Convenience functions for Reflexxes</description>
  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libreflexxestype2</depend>

</package>
